--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,9 @@
 .Header {
-    color: red;
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Nav {
@@ -7,13 +11,33 @@
 }
 
 .ul-nav {
-    color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .li-nav {
-    color: red;
+    margin: 0 20px;
+}
+
+h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+
 }
 
 .nav-link {
-    color: red;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0 5px;
+    color: white;
+    font-size: 18px;
+}
+
+.nav-link:hover {
+    text-decoration: underline;
 }
