--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,3 +1,17 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+}
+
+.main-section {
+  margin: 100px;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .main-section {
+    margin: 5px;
+  }
 }
