updated home page with links to about and works

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -10,11 +10,17 @@
     color: goldenrod;
 }
 
+.p-home {
+    margin: 0;
+    padding: 5px 0;
+}
+
 .call-to-action {
     color: white;
     background-color: green;
     border: solid 1px green;
     max-width: fit-content;
+    margin: 20px 0;
     padding: 10px 20px;
     text-decoration: none;
     font-weight: bold;
