--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -1,3 +1,46 @@
+/* MAIN SECTION */
 .Works {
-    color: purple;
+  color: purple;
+  /* border: solid 1px red; */
+  padding: 100px 60px;
+  height: 73.8vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .Works {
+    margin: 0;
+  }
+}
+
+/* CARDS SECTION */
+.cards__ul {
+  /* border: solid 1px red; */
+  list-style: none;
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+/* CARDS */
+.cards__ul li {
+  border: solid 1px red;
+  min-width: 300px;
+  max-width: 300px;
+  height: 430px;
+  margin: 25px;
+  background-image: url("../../assets/philip-unsplash.jpg");
+  background-position: center center;
+  background-size: 100% 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  color: white;
 }
